General styling. Fixed bug with Edit, Create, Activate/Deactivate Trip.

--- a/SendMe/Views/Home/About.cshtml
+++ b/SendMe/Views/Home/About.cshtml
@@ -11,9 +11,8 @@
     <hr />
 
     <p>
-        <strong>The Global Health Initiative from the World Health Organization</strong>
             <p>
-                WHO's Global School Health Initiative, launched in 1995, seeks to mobilise and
+                <strong>WHO's Global School Health Initiative</strong> launched in 1995, seeks to mobilise and
                 strengthen health promotion and education activities at the local, national,
                 regional and global levels. The Initiative is designed to improve the health of
                 students, school personnel, families and other members of the community through schools.
@@ -76,7 +75,7 @@
     </p>
 
     <p>
-        As an added bonus,this will allow Alumni of the school who wish to donate to
+        As an added bonus, this will allow Alumni of the school who wish to donate to
         current students the opportunity to do so without having to reach out to the
         school's administration to find out where to send funds.
     </p>
