--- a/SendMe/Views/Manage/Index.cshtml
+++ b/SendMe/Views/Manage/Index.cshtml
@@ -65,7 +65,7 @@
 
                 <!--Submit-->
                 <div class="col-md-4">
-                    <button type="submit" id="profileSave" class="btn btn-toolbar btn-success">
+                    <button type="submit" id="profileSave" class="btn btn-toolbar btn-primary">
                         <span class="glyphicon glyphicon-check"></span>
                     </button>
                 </div>
