--- a/SendMe/Views/Shared/_PaymentPartial.cshtml
+++ b/SendMe/Views/Shared/_PaymentPartial.cshtml
@@ -41,7 +41,7 @@
                     <button id="paymentBackBtn" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Go Back"><i class="glyphicon glyphicon-arrow-left"></i> Back</button>
                 </div>
                 <div class="col-lg-5 paymentBtn">
-                    <button type="submit" class="btn btn-success" data-toggle="tooltip" data-placement="right" title="Submit Donation"><i class="glyphicon glyphicon-ok"></i> Submit</button>
+                    <button type="submit" class="btn btn-primary" data-toggle="tooltip" data-placement="right" title="Submit Donation"><i class="glyphicon glyphicon-ok"></i> Submit</button>
                 </div>
             </div>
         </div>
