--- a/SendMe/Views/Shared/_Upload.cshtml
+++ b/SendMe/Views/Shared/_Upload.cshtml
@@ -26,7 +26,7 @@
 
             </p>
             <p>
-                <button type="submit" id="ppUpload" class="btn btn-toolbar btn-success">
+                <button type="submit" id="ppUpload" class="btn btn-toolbar btn-primary">
                     <span class="glyphicon glyphicon-save"></span>
                 </button>
             </p>
