--- a/SendMe/Content/Site.css
+++ b/SendMe/Content/Site.css
@@ -37,6 +37,10 @@ textarea {
 
 /*--------------------------------------------------*/
 
+a {
+    color: #1a5b55;
+}
+
 .wrapper {
     min-width: 100%;
 }
@@ -50,11 +54,6 @@ td {
     padding: 15px;
 }
 
-
-.btn-success {
-    background-color: #1ABBAC;
-    border-color: #fff;
-}
 
 .btn-primary {
     background-color: #1ABBAC;
@@ -212,6 +211,7 @@ h1 {
     display: none;
 }
 
+
 /*---------------------------------
 
           Color Palette
@@ -246,14 +246,23 @@ h1 {
     color: #1a5b55;
 }
 
+/*-----------------------
+
+    Donations Panel
+
+-----------------------*/
 
 #donationsPanel .col-md-4 {
     padding: 0;
     border-radius: 0;
 }
 
-#donationsPanel .form-actions .no-color {
+#donationsPanel {
     max-width: 100%;
+}
+
+select {
+    border-radius: 5px;
 }
 
 /*-----------------------------
@@ -264,7 +273,7 @@ h1 {
 .about-content {
     margin: 5%;
     background-color: #fff;
-    color: #1a5b55;
+    color: #020202;
     padding: 5%;
     border: rgba(0,0,0,0.08);
     border-radius: 15px;
@@ -273,6 +282,7 @@ h1 {
 
     .about-content h2 {
         text-align: center;
+        color: #289f94;
     }
 
     .about-content li {
@@ -308,6 +318,10 @@ form .about-content {
 
 #loginForm .form-group {
     margin-left: 5%;
+}
+
+.contactForm {
+    margin-left: 25%;
 }
 
 /*-----------------------
@@ -391,6 +405,7 @@ form .about-content {
     position: relative;
 }
 
+
 /*-----------------------
 
       Trip Card
@@ -406,6 +421,15 @@ form .about-content {
     box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
     border-radius: 5px;
     left: 0;
+}
+
+#inactiveTrips li {
+    list-style: none;
+}
+
+#inactiveTrips button {
+    margin-top: 0;
+    margin-bottom: 20px;
 }
 
 /*-----------------------
@@ -437,7 +461,7 @@ form .about-content {
          School Profile Card
 
 ---------------------------------------*/
-.school-card .card-prof-pic-sch {
+.school-card .card-prof-pic {
     top: 45%;
     left: 40%;
     position: absolute;
@@ -712,6 +736,7 @@ css for donation success/fail
         background-color: #4FC1E9;
         text-align: center;
     }
+
     /*---------------------------
 
    progress bar css
@@ -720,6 +745,7 @@ css for donation success/fail
 .progress-bar{
     background-color:#1ABBAC;
 }
+
     /*---------------------------
 
    Donations Table css
@@ -728,6 +754,8 @@ css for donation success/fail
 .table-condensed{
     font-size:14px;
 }
+
+
     /*-------------------------------------------------------------------------------
     Make Active Toggle
         http://callmenick.com/post/css-toggle-switch-examples
