--- a/SendMe/Views/Home/Index.cshtml
+++ b/SendMe/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
 <img class="landing-img" src="~/Img/SendMe Banner.png" />
 
 <div class="col-sm-12" style="text-align:center">
-    <a href="~/school/1" type="button" class="btn btn-success">Find Your School</a>
+    <a href="~/school/1" type="button" class="btn btn-primary">Find Your School</a>
 </div>
