--- a/SendMe/Views/Account/Register.cshtml
+++ b/SendMe/Views/Account/Register.cshtml
@@ -3,18 +3,17 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal about-content", id="regForm", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
+    <h2>Welcome!</h2>
     <hr />
+    <h4>Create a new account. Be sure to use your school email address!</h4>
     @Html.ValidationSummary("", new { @class = "text-danger" })
 
     <!--School-->
     <div class="form-group">
-        @Html.LabelFor(m => m.SchoolId, new {  @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.SchoolId, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.DropDownListFor(x => x.SchoolId, new SelectList(ViewBag.Schools, "Value", "Text"))
             @Html.ValidationMessageFor(m => m.SchoolId)
@@ -39,7 +38,7 @@
 
     <!--Password Confirm-->
     <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-10 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
@@ -47,7 +46,7 @@
 
     <!--Admin Code-->
     <div class="form-group">
-        @Html.LabelFor(m => m.AdminKey, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.AdminKey, new { @class = "col-md-10 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.AdminKey, new { @class = "form-control", id = "adminKey" })
         </div>
@@ -57,7 +56,7 @@
     <!--Submit-->
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-primary" value="Register" />
         </div>
     </div>
 }
