--- a/SendMe/Views/Shared/_PaymentPartial.cshtml
+++ b/SendMe/Views/Shared/_PaymentPartial.cshtml
@@ -3,47 +3,41 @@
     and your email will be used to send a donation receipt only.
 </p>
 <hr />
-
-<form name="DonationForm">
-    <h4>Required</h4>
-    <div class="group">
-        <label>
-            <span>Email</span>
-            <input id="DonorEmail" class="field" placeholder="Example@Example.com" type="email" required />
-        </label>
-        <label>
-            <span>Amount</span>
-            <input class="field" placeholder="25.00" id="DonationAmount" type="number" min="0" required />
-        </label>
-        <label>
-            <span>Card</span>
-            <div id="card-element" class="field"></div>
-        </label>
-        <strong class="error"></strong>
-    </div>
-    <h4>Optional</h4>
-    <div class="group">
-        <label>
-            <span>Name</span>
-            <input name="DonorName" id="DonorName" class="field" placeholder="Mic Anderson" type="text" maxlength="30" />
-        </label>
-        <label>
-            <span>Phone</span>
-            <input id="DonorPhoneNumber" class="field" placeholder="(555)-555-5555" type="tel" min="10" max="10" />
-        </label>
-        <div class="container">
-            <label for="comment">Add a personal message:</label>
-            
-            <textarea class="field" typeof="input" rows="5" id="donationMsg" style="width:100%; border: 5px solid #DADEE0;"></textarea>
-
-            <div class="btn-group btn-group-sm" role="group">
-                <div class="col-lg-5 paymentBtn">
-                    <button id="paymentBackBtn" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Go Back"><i class="glyphicon glyphicon-arrow-left"></i> Back</button>
-                </div>
-                <div class="col-lg-5 paymentBtn">
-                    <button type="submit" class="btn btn-success" data-toggle="tooltip" data-placement="right" title="Submit Donation"><i class="glyphicon glyphicon-ok"></i> Submit</button>
-                </div>
-            </div>
+<div class="container">
+    <form name="DonationForm">
+        <h4>Required</h4>
+        <div class="group">
+            <label>
+                <span>Email</span>
+                <input id="DonorEmail" class="field" placeholder="Example@Example.com" type="email" required />
+            </label>
+            <label>
+                <span>Amount</span>
+                <input class="field" placeholder="25.00" id="DonationAmount" type="number" min="0" required />
+            </label>
+            <label>
+                <span>Card</span>
+                <div id="card-element" class="field"></div>
+            </label>
+            <strong class="error"></strong>
         </div>
-    </div>
-</form>
+        <h4>Optional</h4>
+        <div class="group">
+            <label>
+                <span>Name</span>
+                <input name="DonorName" id="DonorName" class="field" placeholder="Mic Anderson" type="text" maxlength="30" />
+            </label>
+            <label>
+                <span>Phone</span>
+                <input id="DonorPhoneNumber" class="field" placeholder="(555)-555-5555" type="tel" min="10" max="10" />
+            </label>
+            <div class="form-group">
+                <label for="donationMsg" class="form-control-label">Send a donation message:</label>
+                <textarea class="form-control" id="donationMsg" style="margin-top: 0px; margin-bottom: 0px; margin-left: 15px; height: 172px; min-width:400px" required></textarea>
+                <hr />
+            </div>
+            <button style="width:25%" id="paymentBackBtn" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Go Back"><i class="glyphicon glyphicon-arrow-left"></i> Back</button>
+            <button style="width:25%" type="submit" class="btn btn-success" data-toggle="tooltip" data-placement="right" title="Submit Donation"><i class="glyphicon glyphicon-ok"></i> Submit</button>
+        </div>
+    </form>
+</div>
