--- a/SendMe/Views/Shared/_ViewDonationsPartial.cshtml
+++ b/SendMe/Views/Shared/_ViewDonationsPartial.cshtml
@@ -1,74 +1,7 @@
-﻿@*@if (Model.User.UserName == User.Identity.Name && Model.ActiveTrip != null)
-{
-    <div class="container">
-        <button id="viewDonBackBtn" type="button" class="btn btn-danger btn-circle" data-toggle="tooltip" data-placement="left" title="Go Back"><i class="glyphicon glyphicon-arrow-left"></i></button>
-    </div>
-    <div id="donationsPanel">
-        @{int i = 0;}
-        @{int r = 0;}
-        @foreach (var donation in Model.ActiveTrip.Donations)
-        {
-            @*r++;
-                if (r == 3)
-                {
-                    @Html.Raw("<div class=row>");
-                }*@
-            @*<div class="col-sm-12">
-                <script> var Di = @i;</script>
-                <div class="panel-group" id="accordion_@i" role="tablist" aria-multiselectable="true">
-                    <div class="panel panel-default" id="panel_@i">
-                        <div class="panel-heading" role="tab" id="headingOne">
-                            <h4 class="panel-title">
-                                <a role="button" data-toggle="collapse" id="accBtn_@i" data-parent="#accordion_@i" aria-expanded="true" aria-controls="collapseAcc_@i" data-target="#collapseAcc_@i">
-                                    <h5>
-                                        $@donation.Amount.00 from @donation.Donor.Name
-                                        @donation.Created.ToString("dd MMM yyyy")
-                                    </h5>
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseAcc_@i" class="panel-collapse glyphicon-collapse" role="tabpanel" aria-labelledby="headingOne">
-                            <div class="panel-body" id="accPanalBody">
-                                @if (@donation.DonationMsg != null)
-                                {
-                                    <p>@donation.Donor.Name says " @donation.DonationMsg "</p>
-                                }
-                                @if (donation.HaveThanked == false && donation.Donor.Name != "Anonymous")
-                                {
-                                    <div id="@("thanks" + donation.Id)">
-                                        @using (Html.BeginForm("SendThankYou", "User", new { donId = donation.Id, stuId = Model.Student.Id }, FormMethod.Post))
-                                        {
-                                            @*<div class="form-actions no-color">*@
-                                            @*<label for="#thnksMsg">Send a thank you note!</label>
-                                                <textarea rows="5" id="thanksMsg" name="thxMsg"></textarea>
-                                                <button type="submit" class="btn btn-success" id="sendThanksBtn" value="sendThanks">
-                                                    <span class="glyphicon glyphicon-send"> Send</span>
-                                                </button>*@
-                                                @*</div>*@
-                                        @*}
-                                    </div>
-
-                                }
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            i++;
-            if (r == 3)
-            {
-                @Html.Raw("</div>");
-            }
-            if (r == 3)
-            { r = 0; }
-        }
-    </div>
-            }*@
-
-
+﻿<button style="width:25%" id="viewDonBackBtn" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Go Back"><i class="glyphicon glyphicon-arrow-left"></i> Back</button>
 @if (Model.User.UserName == User.Identity.Name && Model.ActiveTrip != null)
 {
-    <div class="container">
+    <div class="container" style="width:inherit">
         <div class="panel panel-default">
             <div class="panel-heading"><h3>Donations</h3></div>
             <div class="panel-body">
@@ -79,19 +12,19 @@
                             <th>&nbsp;</th>
                             <th>Donation Amount</th>
                             <th>Donor Name</th>
-                            <th>Donation Date/Time</th>
+                            <th>Donation Date</th>
                         </tr>
                     </thead>
                     <tbody>
                         @{int i = 0;}
                         @foreach (var donation in Model.ActiveTrip.Donations)
                         {
-                            
+
                             <tr data-toggle="collapse" data-target="#collapse_@i" class="accordion-toggle">
                                 <td><button class="btn btn-default btn-sm"><span class="glyphicon glyphicon-chevron-down"></span></button></td>
-                                <td>$@donation.Amount .00</td>
+                                <td><strong>$@donation.Amount .00</strong></td>
                                 <td>@donation.Donor.Name</td>
-                                <td>@donation.Created</td>
+                                <td>@donation.Created.ToString("dd MMM yyyy")</td>
                             </tr>
                             <tr>
                                 <td colspan="12" class="hiddenRow">
@@ -102,46 +35,77 @@
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <td>
+                                                    <td class="container" style="width:60%">
                                                         @donation.DonationMsg
-                                                    <script> var Di = @i;</script>
+                                                        <script> var Di = @i;</script>
                                                     </td>
-                                                    <td>
-                                                        <div class="container">
-                                                            @if (donation.HaveThanked == false && donation.Donor.Name != "Anonymous")
-                                                            {
-                                                                <button data-toggle="collapse" data-target="@("#thanks" + donation.Id)" class="btn btn-sm">
-                                                                    <span class="glyphicon glyphicon-envelope"></span>
-                                                                </button>
-                                                                <div id="@("thanks" + donation.Id)" class="collapse">
-                                                                    @using (Html.BeginForm("SendThankYou", "User", new { donId = donation.Id, stuId = Model.Student.Id }, FormMethod.Post))
-                                                                    {
-                                                                        <div class="form-actions no-color">
-                                                                            <label for="#thnksMsg">Add a personal message!</label>
-                                                                            <textarea rows="5" id="thanksMsg" name="thxMsg"></textarea>
-                                                                            <button type="submit" class="btn btn-success" id="sendThanksBtn" value="sendThanks">
-                                                                                <span class="glyphicon glyphicon-send"> Send</span>
-                                                                            </button>
+                                                    @if (donation.HaveThanked == false && donation.Donor.Name != "Anonymous")
+                                                    {
+                                                        <td>
+                                                            <button style="width:25%" class="btn btn-default btn-sm" data-toggle="modal" data-target="#thankModal"><span class="glyphicon glyphicon-envelope"></span></button>
+                                                        </td>
+                                                        using (Html.BeginForm("SendThankYou", "User", new { donId = donation.Id, stuId = Model.Student.Id }, FormMethod.Post))
+                                                        {
+
+                                                            <div class="modal fade" id="thankModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                                                <div class="modal-dialog" role="document">
+                                                                    <div id="thankModalContnet" class="modal-content" style="max-width:475px">
+                                                                        <div class="modal-header">
+                                                                            <h5 class="modal-title" id="exampleModalLabel">Thank You Message</h5>
                                                                         </div>
-                                                                    }
+                                                                        <form>
+                                                                            <div class="modal-body">
+
+                                                                                <div class="form-group">
+                                                                                    <label for="thankMsg" class="form-control-label">Message:</label>
+                                                                                    <textarea class="form-control" id="thankMsg" name="thxMsg" style="margin-top: 0px; margin-bottom: 0px; margin-left: 15px; height: 172px; min-width:400px" required></textarea>
+                                                                                </div>
+
+                                                                            </div>
+                                                                            <div class="modal-footer">
+                                                                                <button style="width:25%" type="submit" class="btn btn-success" id="sendThanksBtn" value="sendThanks">
+                                                                                    <span class="glyphicon glyphicon-send"> Send</span>
+                                                                                </button>
+
+                                                                                <button style="width:25%" type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                                                                            </div>
+                                                                        </form>
                                                                 </div>
+                                                            </div>
+                                                            </div>
+                                                        }
 
-                                                            }
-                                                        </div>
+                                                    }
+                                                    else
+                                                    {
+                                                    <td>
+                                                       No need/already thanked
                                                     </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
+                                                    }
+                                            </tr>
+                                        </tbody>
+                                    </table>
 
-                                    </div>
+                                </div>
                                 </td>
-                            </tr>
-                            i++;
-                        }
-                    </tbody>
-                </table>
-            </div>
+                                </tr>
 
-        </div>
-    </div>
-}
+
+                            i++;
+
+                        }
+                        </tbody>
+                        </table>
+                    </div>
+
+                </div>
+                </div>
+
+                            }
+                            else
+                            {
+
+                               <strong>No donations yet</strong>
+                            }
+
+
